		ValuePortrayal2D.Portrayal
	Made QuadPortrayal.zScale and QuadPortrayal.colorDispenser private and created
		getters and setters for them.  Likewise for ValuePortrayal3D.map.
	Added ValueGrid2DPortrayal3D.[get|set]ValueName(...).  Made
		ValueGrid2DPortrayal3D.valueName private.  This required a small modification
		to HeatBugs.
	Added ValueGridPortrayal3D.[get|set]Map(...). Made ValueGridPortrayal3D.map private.
	Made both ValueGridPortrayal2D.valueName and ValueGridPortrayal3D.valueName private.
	Fixed bug in SparseGridPortrayal2D: selection information was not being passed on to
		simple portrayals.  Thanks to Martin Erdelen <martin.erdelen@kolombus.fi>
	Appropriate wrapper Simple Portrayals now pass mouse event information on to their
		children.
	ValueGridPortrayal3D.newValue revised to work in the same way as ValueGridPortrayal2D
		and ValueGrid2DPortrayal3D.
	Removed a spurious beep in ValueGridPortrayal3D
	Revisions to ValueGridPortrayal3D to refuse to allow changes in dimension to the
		field (because it doesn't use BranchGroups, argh, Java3D is irritating)
		and to allow scale changes to the individual blocks.
	Added ValueGrid2DPortrayal3D.getTransparency() and getImage().  Made the image and
		transparency variables private.  setTransparency() now checks for a valid
		transparency value.
	Restructuring of code to move polygon attributes in the ValueGrid2DPortrayal3D, 
		eliminating a confusing piece of code which was a possible facilitator of bugs.
	Modified ValueGrid2DPortrayal3D.newValue(...) to handle ObjectGrid2D
	Modified ValueGridCellInfo, removing the z option and removing doubleValue()
	Created new directory, sim/portrayal3d/simple/shapes/ for some OBJ files
	SimplePortrayal3D.setSelected() now frees its HashMap if it's empty
	Made PrimitivePortrayal3D.group protected
	PrimitivePortrayal3D.getAppearance returns a brand-new Appearance if the number of
		shapes is zero.
	Renamed Axes to AxesPortrayal3D